--- a/2_webserver/Vagrantfile
+++ b/2_webserver/Vagrantfile
@@ -12,7 +12,8 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://atlas.hashicorp.com/search.
-  config.vm.box = "box-cutter/ubuntu1404-desktop"
+  #config.vm.box = "geerlingguy/ubuntu1404"
+  config.vm.box = "minimal/trusty64"
 
   #config.ssh.insert_key = false
 
@@ -25,6 +26,7 @@ Vagrant.configure("2") do |config|
   # within the machine from a port on the host machine. In the example below,
   # accessing "localhost:8080" will access port 80 on the guest machine.
   # config.vm.network "forwarded_port", guest: 80, host: 8080
+  config.vm.network "forwarded_port", guest: 80, host: 8888
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
@@ -33,9 +35,21 @@ Vagrant.configure("2") do |config|
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
   # your network.
-  config.vm.network "public_network",
-    bridge: "wlan0",
-    use_dhcp_assigned_default_route: true
+  config.vm.network "private_network", ip: "192.168.33.33"
+
+  config.vm.provider :virtualbox do |v|
+    v.name = "webserver"
+    v.memory = 512
+    v.cpus = 2
+    v.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
+    v.customize ["modifyvm", :id, "--ioapic", "on"]
+  end
+
+  config.vm.hostname = "webserver"
+
+  # Set the name of the VM. See: http://stackoverflow.com/a/17864388/100134
+  config.vm.define "webserver" do |webserver|
+  end
 
   # Share an additional folder to the guest VM. The first argument is
   # the path on the host to the actual folder. The second argument is
@@ -47,25 +61,8 @@ Vagrant.configure("2") do |config|
   # backing providers for Vagrant. These expose provider-specific options.
   # Example for VirtualBox:
   #
-  config.vm.provider "virtualbox" do |vb|
-     # Display the VirtualBox GUI when booting the machine
-     vb.gui = true
-     
-     vb.name = "workstation"
-
-     # Customize the amount of memory on the VM:
-     vb.memory = "4096"
-     vb.cpus = 2
-   end
-  #
   # View the documentation for the provider you are using for more
   # information on available options.
-
-  config.vm.hostname = "workstation"
-
-  # Set the name of the VM. See: http://stackoverflow.com/a/17864388/100134
-  config.vm.define "workstation" do |workstation|
-  end
 
   # Define a Vagrant Push strategy for pushing to Atlas. Other push strategies
   # such as FTP and Heroku are also available. See the documentation at
