--- a/2_webserver/Vagrantfile
+++ b/2_webserver/Vagrantfile
@@ -41,8 +41,8 @@ Vagrant.configure("2") do |config|
     v.name = "webserver"
     v.memory = 512
     v.cpus = 2
-    v.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
-    v.customize ["modifyvm", :id, "--ioapic", "on"]
+    #v.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
+    #v.customize ["modifyvm", :id, "--ioapic", "on"]
   end
 
   config.vm.hostname = "webserver"
